Refresh data after changing job ad status; Optimize import in scss files

--- a/frontend/src/app/core/components/main-panel/header/header.component.scss
+++ b/frontend/src/app/core/components/main-panel/header/header.component.scss
@@ -1,4 +1,4 @@
-@import "src/variables";
+@use "src/variables" as vars;
 
 mat-toolbar {
   background-color: white !important;
@@ -26,6 +26,6 @@ mat-toolbar {
 }
 
 .menu-icon {
-  color: $primaryColor;
+  color: vars.$primaryColor;
   font-weight: bold;
 }
