--- a/frontend/src/app/job-ad/modal/view-job-ad/view-job-ad-dialog.component.scss
+++ b/frontend/src/app/job-ad/modal/view-job-ad/view-job-ad-dialog.component.scss
@@ -2,6 +2,7 @@ mat-dialog-content {
   padding: 0 24px 24px;
   overflow-y: auto;
   max-width: 80vw;
+  display: grid;
 }
 
 @media screen and (max-width: 599px) {
