--- a/frontend/src/app/core/components/dashboard/dashboard.component.scss
+++ b/frontend/src/app/core/components/dashboard/dashboard.component.scss
@@ -1,4 +1,4 @@
-@import "src/variables";
+@use "src/variables" as vars;
 
 .dashboard-container {
   display: flex;
@@ -31,7 +31,7 @@
 }
 
 .published {
-  background: $primaryColor !important;
+  background: vars.$primaryColor !important;
 }
 
 .archived {
