--- a/frontend/src/app/job-ad/containers/view-job-ads/view-job-ads.component.html
+++ b/frontend/src/app/job-ad/containers/view-job-ads/view-job-ads.component.html
@@ -48,9 +48,9 @@
       </ng-template>
     </div>
     <ng-template #noData>
-<!--      <div class="no-data">-->
+      <div class="no-data">
         No data for job ads to show.
-<!--      </div>-->
+      </div>
     </ng-template>
   </div>
 
