--- a/frontend/src/app/job-ad/containers/view-job-ads/view-job-ads.component.scss
+++ b/frontend/src/app/job-ad/containers/view-job-ads/view-job-ads.component.scss
@@ -44,11 +44,11 @@
   z-index: 1
 }
 
-//.no-data {
-//  text-align: center;
-//  margin: 5vh 0;
-//  font-size: 1.2rem
-//}
+.no-data {
+  text-align: center;
+  margin: 5vh 0;
+  font-size: 1.2rem
+}
 
 @media (max-width: 767px) {
   .item {
