--- a/frontend/src/app/core/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/core/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-panel-content [isContainer]="true" *ngrxLet="statistic$ | async as statistic" [title]="'Job ad dashboard'">
+<app-panel-content *ngrxLet="statistic$ | async as statistic" [title]="'Job ad dashboard'">
   <div class="dashboard-container">
     <mat-card class="tile draft">
       <mat-card-title>DRAFT</mat-card-title>
