--- a/frontend/src/app/core/components/main-panel/navigation-item/navigation-item.component.html
+++ b/frontend/src/app/core/components/main-panel/navigation-item/navigation-item.component.html
@@ -5,7 +5,7 @@
    [routerLinkActiveOptions]="matchOptions"
    [disableRipple]="true"
 >
-  <div style="display: flex">
+  <div class="navigation-container">
     <mat-icon>{{navigationItem.icon}}</mat-icon>
     <mat-divider vertical></mat-divider>
     <div class="item-selector"></div>
