--- a/frontend/src/app/job-ad/containers/add-job-ad/add-job-ad.component.html
+++ b/frontend/src/app/job-ad/containers/add-job-ad/add-job-ad.component.html
@@ -1,3 +1,3 @@
-<app-panel-content [title]="'Add job ad'" [isContainer]="false" [icon]="'add'" [haveAction]="false">
+<app-panel-content [title]="'Add job ad'" [icon]="'add'" [haveAction]="false">
   <app-job-ad-form (save)="saveJobAd($event)"></app-job-ad-form>
 </app-panel-content>
