--- a/frontend/src/app/job-ad/components/job-ad-cards/job-ad-cards.component.html
+++ b/frontend/src/app/job-ad/components/job-ad-cards/job-ad-cards.component.html
@@ -12,7 +12,7 @@
       </mat-card-title-group>
     </mat-card-header>
     <mat-card-content>
-      <mat-divider style="width: 100%; margin: 5px 0"></mat-divider>
+      <mat-divider class="divider"></mat-divider>
       <div class="description"
            *ngrxLet="jobAd.description as description"
            matTooltip="{{description.length > 200 ? description : undefined}}">
@@ -20,7 +20,7 @@
       </div>
     </mat-card-content>
     <mat-card-footer>
-      <mat-divider style="width: 100%; margin: 5px 0"></mat-divider>
+      <mat-divider class="divider"></mat-divider>
       <app-custom-chips [chips]="jobAd.skills"></app-custom-chips>
     </mat-card-footer>
   </mat-card>
