--- a/frontend/src/app/job-ad/components/job-ad-cards/job-ad-cards.component.scss
+++ b/frontend/src/app/job-ad/components/job-ad-cards/job-ad-cards.component.scss
@@ -51,6 +51,7 @@
   font-size: 16px;
   color: #7E7775;
   padding: 5px;
+  word-break: break-word;
 }
 
 .mat-card-actions {
@@ -61,6 +62,11 @@
 mat-card-footer {
   margin-top: auto;
   padding: 0 16px 5px;
+}
+
+.divider {
+  width: 100%;
+  margin: 5px 0;
 }
 
 @media screen and (max-width: 599px) {
