--- a/frontend/src/app/shared/components/chip-text-input/chip-text-input.component.html
+++ b/frontend/src/app/shared/components/chip-text-input/chip-text-input.component.html
@@ -15,7 +15,7 @@
       <input placeholder="New item..."
              [matChipInputFor]="chipGrid"
              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-             [matChipInputAddOnBlur]="addOnBlur"
+             [matChipInputAddOnBlur]="true"
              (matChipInputTokenEnd)="add($event)">
     </mat-chip-grid>
     <mat-error *ngIf="fc?.errors?.['required']">Required field.</mat-error>
