--- a/frontend/src/app/job-ad/components/job-ad-form/job-ad-form.component.scss
+++ b/frontend/src/app/job-ad/components/job-ad-form/job-ad-form.component.scss
@@ -21,9 +21,9 @@ button {
   }
 }
 
-//mat-form-field {
-//  padding: 5px 0;
-//}
+mat-form-field {
+  padding: 5px 0;
+}
 
 @media (max-width: 1023px) {
 
