--- a/frontend/src/app/core/components/main-panel/main-panel.component.html
+++ b/frontend/src/app/core/components/main-panel/main-panel.component.html
@@ -1,4 +1,4 @@
 <ng-container>
   <app-header (toggleOpenEmitter)="toggleSideNav()"></app-header>
-  <app-side-nav [opened]="openedSideNav"></app-side-nav>
+  <app-side-nav [opened]="openedSideNav" (onNavigationItemClick)="toggleSideNav()"></app-side-nav>
 </ng-container>
